Created Get user details API and Update user feedback API. Added swag… (#12)
* Created Get user details API and Update user feedback API. Added swagger documentation for APIs

* Created Get all survey details API with pagination and status filter
